@@ -768,6 +768,10 @@ bool ProjectProperties::AddAutoProps(const CTSVNPath& path)
 		bRet = props.Add(BUGTRAQPROPNAME_WARNIFNOISSUE, "true") && bRet;
 	if (!bAppend)
 		bRet = props.Add(BUGTRAQPROPNAME_APPEND, "false") && bRet;
+	if (!sProviderUuid.IsEmpty())
+		bRet = props.Add(BUGTRAQPROPNAME_PROVIDERUUID, WideToUTF8((LPCTSTR)sProviderUuid)) && bRet;
+	if (!sProviderParams.IsEmpty())
+		bRet = props.Add(BUGTRAQPROPNAME_PROVIDERPARAMS, WideToUTF8((LPCTSTR)sProviderParams)) && bRet;
 	if (nLogWidthMarker)
 	{
 		sprintf_s(buf, sizeof(buf), "%ld", nLogWidthMarker);
@@ -787,6 +791,10 @@ bool ProjectProperties::AddAutoProps(const CTSVNPath& path)
 	}
 	if (!bFileListInEnglish)
 		bRet = props.Add(PROJECTPROPNAME_LOGFILELISTLANG, "false") && bRet;
+	if (!sLogSummaryRe.IsEmpty())
+		bRet = props.Add(PROJECTPROPNAME_LOGSUMMARY, WideToUTF8((LPCTSTR)sLogSummaryRe)) && bRet;
+	if (!sLogRevRegex.IsEmpty())
+		bRet = props.Add(PROJECTPROPNAME_LOGREVREGEX, WideToUTF8((LPCTSTR)sLogRevRegex)) && bRet;
 	if (lProjectLanguage)
 	{
 		sprintf_s(buf, sizeof(buf), "%ld", lProjectLanguage);
